# O-sRSSly

./: CMakeLists.txt  Info.plist  TODO  config.h.cmake  feeder.pro  mkbundle.sh  mkdmg.make  test.atom  test.html  test.sublist
data/: Feeder.icns  data.qrc  helpers.js  inittables.sql  logo.xcf  longcat.xcf  webclip.js  welcome.html
debian/: changelog  control  copyright  feeder.desktop  rules
messages/: controlevents.proto  inputevents.proto  mouseevent.proto  newpageevent.proto  point.proto  spawnevent.proto  spawnreply.proto
spawn/: CMakeLists.txt  child.cpp  child.h  iodevicestream.cpp  iodevicestream.h  manager.cpp  manager.h  mapped_memory.h  mapped_memory_unix.cpp  mapped_memory_win32.cpp  page.cpp  page.h  qthelpers.cpp  qthelpers.h  spawn.cpp  spawn.h  spawn.pro  view.cpp  view.h
spawn/data/: error.html  spawn.qrc
src/: CMakeLists.txt  about.cpp  about.h  about.ui  allitems.cpp  allitems.h  apiaction.cpp  apiaction.h  atomfeed.cpp  atomfeed.h  browser.cpp  browser.h  browser.ui  configuredialog.cpp  configuredialog.h  configuredialog.ui  database.cpp  database.h  default_keychain.h  entryview.cpp  entryview.h  feeditem.cpp  feeditem.h  feedsmodel.cpp  feedsmodel.h  feedview.cpp  feedview.h  folderitem.cpp  folderitem.h  gnome_keychain.cpp  gnome_keychain.h  jsonutils.cpp  jsonutils.h  keychain.cpp  keychain.h  ksqueezedtextlabel.cpp  ksqueezedtextlabel.h  kwallet_keychain.cpp  kwallet_keychain.h  longcatbar.cpp  (+35 more)
tinyjson/: tinyjson.hpp
